# VolCon

./: README.md  pyproject.toml
model/: README.md  context_image_transformer.py  context_model.py  resnet_block.py  volume_fraction_model.py
testing/: README.md  basic_evaluation_pipeline.py  mask_creation_app.py  mask_postprocessing.py  statistical_volume_fraction_prediction.py
testing/processed_testing_data/Al10Cu90_000665/: material_1_sample.pt  material_2_sample.pt  microstructure.pt  volume_fractions.csv
testruns/5.7M_Context_Linear1/: data_hyperparameters.json  test_metrics.json  train_metrics.json
testruns/5.7M_Context_Linear2/: data_hyperparameters.json  test_metrics.json  train_metrics.json
testruns/5.7M_Context_Linear3/: data_hyperparameters.json  test_metrics.json  train_metrics.json
testruns/5.7M_Context_Linear4/: data_hyperparameters.json  test_metrics.json  train_metrics.json
testruns/5.7M_Context_Linear5/: data_hyperparameters.json  model_hyperparameters.json  test_metrics.json  train_metrics.json
testruns/5.7M_Context_Linear6/: data_hyperparameters.json  test_metrics.json  train_metrics.json
testruns/5.7M_Context_Linear7/: model_hyperparameters.json  test_metrics.json  train_metrics.json
testruns/5.7M_Linear1/: test_metrics.json  train_metrics.json
training/: README.md  generate_synthetic_two_phase_image.py  training_pipeline.py
training/synthetic_data_hyperparameters/: augmentation.py  shapes.py
utils/: memory_saving.py  metrics.py  parallel_computing.py  parameters.py  postprocessing.py  reproducability.py
(+172 files in other folders)
