[tool.poetry]
name = "volcon"
version = "0.1.0"
description = ""
authors = ["Leander Meinken <l.meinken@campus.tu-berlin.de>"]
readme = "README.md"
packages = [{include = "model"}, {include = "training"}, {include = "utils"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
