[tool.poetry]
name = "volcon"
version = "0.1.0"
description = ""
authors = ["Leander Meinken <l.meinken@campus.tu-berlin.de>"]
readme = "README.md"
packages = [{include = "model"}, {include = "training"}, {include = "utils"}]

[tool.poetry.dependencies]
python = "^3.12"
torch = {version="=2.4.0+cu124", source = "pytorch"}
torchinfo = "^1.8.0"
numpy = "1.26.4"
tqdm = "^4.66.5"
opencv-python = "^4.10.0.84"
pandas = "^2.2.2"
scikit-image = "^0.24.0"
matplotlib = "^3.9.1.post1"
joblib = "^1.4.2"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
secondary = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
